--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,24 +1,15 @@
+body {
+  font-family: 'Dosis', sans-serif;
+  background-color: #FFFFFA;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+/*!!!!!!!!!! --ATOMICS-- !!!!!!!!!!*/
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.cp {
+  cursor: pointer;
 }
