--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,31 @@
+/* Reset / Override */
+*:focus {
+    outline: none;
+}
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #7c8086;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #7c8086;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #7c8086;
+}
+
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Exo 2', sans-serif;
   background-color: #FFFFFA;
+  color: #42282F;
 }
 
 .App {
   text-align: center;
+}
+
+.social-svg-mask:hover {
+    fill: #DC9C76 !important;
 }
 
 
@@ -12,4 +33,32 @@ body {
 
 .cp {
   cursor: pointer;
+}
+
+.ml10 {
+  margin-left: 10px;
+}
+
+.green {
+  color: #74A588;
+}
+
+.brown {
+  color: #42282F;
+}
+
+.tan {
+  color: #D6CCAD;
+}
+
+.orange {
+  color: #DC9C76;
+}
+
+.red {
+  color: #D6655A;
+}
+
+.fb {
+  display: flex;
 }
