--- a/frontend/src/components/common/navigation/navigation.css
+++ b/frontend/src/components/common/navigation/navigation.css
@@ -19,6 +19,12 @@ nav h1 {
     font-size: 50px;
 }
 
+nav a {
+    color: inherit;
+    text-decoration: none;
+    font-size: 30px;
+}
+
 .logo {
-    
+
 }
