finish words_with_unfeeling_machines board

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,80 +25,5 @@ body {
 }
 
 .social-svg-mask:hover {
-    fill: #DC9C76 !important;
-}
-
-
-/*!!!!!!!!!! --ATOMICS-- !!!!!!!!!!*/
-
-.cp {
-  cursor: pointer;
-}
-
-.ml10 {
-  margin-left: 10px;
-}
-
-.green {
-  color: #74A588;
-}
-
-.brown {
-  color: #42282F;
-}
-
-.tan {
-  color: #D6CCAD;
-}
-
-.orange {
-  color: #DC9C76;
-}
-
-.red {
-  color: #D6655A;
-}
-
-.fb {
-  display: flex;
-}
-
-.green-b {
-  background-color: #74A588;
-}
-
-.brown-b {
-  background-color: #42282F;
-}
-
-.tan-b {
-  background-color: #D6CCAD;
-}
-
-.orange-b {
-  background-color: #DC9C76;
-}
-
-.red-b {
-  background-color: #D6655A;
-}
-
-.op50 {
-  opacity: 50%;
-}
-
-.light-tan-b {
-  background-color: #FFFFFA;
-}
-
-.jcc {
-  justify-content: center;
-}
-
-.fs46 {
-  font-size: 46px;
-}
-
-.fs10 {
-  font-size: 10px;
+    fill: #FFB2A7 !important;
 }
