--- a/frontend/src/components/common/footer/footer.css
+++ b/frontend/src/components/common/footer/footer.css
@@ -2,6 +2,7 @@ footer {
   background-color: #42282F;
   color: #D6CCAD;
   justify-content: space-around;
+  padding: 20px 0 30px 0;
 }
 
 footer a {
