--- a/frontend/src/components/common/footer/footer.css
+++ b/frontend/src/components/common/footer/footer.css
@@ -9,6 +9,7 @@ footer a {
   text-decoration: none;
   color: inherit;
   font-size: inherit;
+  margin-right: 5px;
 }
 
 footer a:hover, footer a:focus {
