--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,31 @@
+/* Reset / Override */
+*:focus {
+    outline: none;
+}
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #7c8086;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #7c8086;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #7c8086;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Exo 2', sans-serif;
+  background-color: #FFFFFA;
+  color: #42282F;
+}
+
+.App {
+  text-align: center;
+}
+
+.social-svg-mask:hover {
+    fill: #FFB2A7 !important;
 }
