--- a/frontend/src/components/common/atomics/layout.css
+++ b/frontend/src/components/common/atomics/layout.css
@@ -2,12 +2,28 @@
   cursor: pointer;
 }
 
+.ma {
+  margin: auto;
+}
+
 .ml10 {
   margin-left: 10px;
 }
 
+.mr10 {
+  margin-right: 10px;
+}
+
 .fb {
   display: flex;
+}
+
+.f1 {
+  flex: 1;
+}
+
+.f2 {
+  flex: 2;
 }
 
 .fdc {
@@ -24,6 +40,10 @@
 
 .jcsb {
   justify-content: space-between;
+}
+
+.fww {
+  flex-wrap: wrap;
 }
 
 .fs46 {
