--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,16 @@
    color:    #7c8086;
 }
 
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+select::-ms-expand {
+    display: none;
+}
+
 body {
   margin: 0;
   padding: 0;
