--- a/frontend/src/components/common/atomics/layout.css
+++ b/frontend/src/components/common/atomics/layout.css
@@ -6,6 +6,10 @@
   margin: auto;
 }
 
+.mb50 {
+  margin-bottom: 50px;
+}
+
 .ml10 {
   margin-left: 10px;
 }
@@ -42,6 +46,14 @@
   justify-content: space-between;
 }
 
+.aic {
+  align-items: center;
+}
+
+.asc {
+  align-self: center;
+}
+
 .fww {
   flex-wrap: wrap;
 }
@@ -50,6 +62,42 @@
   font-size: 46px;
 }
 
+.fs20 {
+  font-size: 20px;
+}
+
 .fs10 {
   font-size: 10px;
+}
+
+.db {
+  display: block;
+}
+
+.p10 {
+  padding: 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.br1 {
+  border-radius: 1px;
+}
+
+.br2 {
+  border-radius: 2px;
+}
+
+.br5 {
+  border-radius: 5px;
+}
+
+.mw50 {
+  max-width: 50px;
+}
+
+.mw100 {
+  max-width: 100px;
 }
