--- a/frontend/src/components/common/footer/footer.css
+++ b/frontend/src/components/common/footer/footer.css
@@ -1,8 +1,13 @@
 footer {
-  background-color: #42282F;
-  color: #D6CCAD;
-  justify-content: space-around;
-  padding: 20px 0 30px 0;
+    bottom: 0;
+    min-height: 100px;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    background-color: #42282F;
+    color: #D6CCAD;
+    justify-content: space-around;
+    padding: 20px 0 30px 0;
 }
 
 footer a {
