--- a/frontend/src/components/layout/layout.css
+++ b/frontend/src/components/layout/layout.css
@@ -6,6 +6,14 @@
   margin: auto;
 }
 
+.mla {
+  margin-left: auto;
+}
+
+.mra {
+  margin-right: auto;
+}
+
 .mb50 {
   margin-bottom: 50px;
 }
@@ -116,4 +124,8 @@
 
 .lh50 {
   line-height: 50px;
+}
+
+.tac {
+  text-align: center;
 }
