--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,6 @@ body {
   text-align: center;
 }
 
-.social-svg-mask:hover {
-    fill: #FFB2A7 !important;
-}
+/*.social-svg-mask:hover {
+    fill: #7A69B3 !important;
+}*/
