--- a/frontend/src/components/common/footer/footer.css
+++ b/frontend/src/components/common/footer/footer.css
@@ -4,10 +4,12 @@ footer {
     left: 0;
     position: absolute;
     width: 100%;
-    background-color: #42282F;
-    color: #D6CCAD;
     justify-content: space-around;
     padding: 20px 0 30px 0;
+}
+
+footer h1 {
+  color: #C8C8C8;
 }
 
 footer a {
