--- a/frontend/src/components/common/navigation/navigation.css
+++ b/frontend/src/components/common/navigation/navigation.css
@@ -10,8 +10,8 @@ nav {
     align-content: center;
     padding: 0;
     padding-bottom: 0px;
-    border-bottom: 1px solid #42282F;
-    color: #D6655A;
+    border-bottom: 1px solid #C8C8C8;
+    color: #7A69B3;
 }
 
 nav h1 {
